--- a/admin-world/package.json
+++ b/admin-world/package.json
@@ -8,7 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "core-js": "^3.7.0",
+    "core-js": "2",
     "regenerator-runtime": "^0.13.7",
     "view-design": "^4.4.0",
     "vue": "^2.6.11",
